# lnu

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  intrest.md  latex.md  mdpdf_LaTeX.md
AdventOfCode/2016/: get_input.py
AdventOfCode/2017/: get_input.py
AdventOfCode/2018/: run.sh
AdventOfCode/2020/: 1.py  20.py  get_input.py
AdventOfCode/2022/: get_input.py
AdventOfCode/2023/: get_input.py
emil/: README.md
emil/Databaser/: 02-06_testing.sql  02-19.sql  03-04.sql  2024-02-19.mwb  current.sql  new.sql  room_booking.mwb  testing.sql
emil/year_3/2DT903/PicoCode/Lab2/: CMakeLists.txt  HelloWorld.c  Project.c  Readme.md
emil/year_3/2DT903/PicoCode/Lab2/dht/: CMakeLists.txt
fen/: README.md
fen/AdventOfCode/: get_input.py
fen/y2/code/2dt901/labs/lab3/t3/: CMakeLists.txt  taskThree.S
soppa/: README.md
soppa/1DT903 - Databaser/: Assignment2.docx  Bookstore diagram.mwb.bak  F.sql  G.sql  H.sql  J.sql  Untitled.mwb.bak  Untitled.sql
soppa/1DT907 - Algoritmer/: Assignment  2 report algo.docx  Assignment 1 report (kopia 2).docx  Assignment 1 report.docx  Assignment 3 report.docx
soppa/1DT908 - Mjukvaruprojekt/: Reflektionsrapport över projekt.docx  Yrkesuppgift ingenjör.docx
soppa/1DT909 - Parallell/: Assignment 1 report Paral.docx  Assignment 1 report.docx  Assignment 2 report.docx  problem12.go  ~$signment 1 report Paral.docx  ~$signment 1 report.docx
soppa/1FY901 - Mekanik/: Analytisk mekanik.docx  Lab2.m  Lab3  Lab3.m  Lab3data.mat  TEstlab2.m  lab1_1b.m  studsmatta.fig
soppa/1MA915 - Statistik/: Lab4NyKorr.ipynb  labb4.ipynb
soppa/1MA916 - Flervariabel/: Task10.m  Task6.m  Task9.m
soppa/1MA930 - Numeriska/: Assignment 2.docx  JBokstav.fig  LUTimes.m  SBokstav.fig  a1_1.m  a1_2.m  a1_3.m  a1_4.m  a1_5.m  a1_6.m  a2_1.m  a2_2.m  a2_3.m  a2_4.m  a2_5.m  a2_6.m  a_12.m  a_21.m  a_23.m  a_33.m  a_4_1.m  adapquad.m  bezierdrawInput.m  bisection_method2.m  compositeSimpsonsRule.m  find_t_s.m  find_t_s_newton.m  jacobi.m  lab18_1.m  lab18_2.m  labweek18-1.m  matlab.mat  nest.m  networkG.m  newtdd.m  newtonTest.m  rc4.m  rc5.m  rc5_2.m  rc5_3.m  (+17 more)
soppa/1ZT901 - Teknisk Kommunikation/: Inför seminarium.docx  Oskar-Utkast2 granskat.docx  Seminarieseammanfattning-Imad.pptx  TekninskKomm-presentation.pptx  TekniskKommunikationRapport (8).docx  TekniskKommunikationRapport-jw223rn.docx  TekniskKommunikationRapport.docx
soppa/1ZT902 - Hållbar/: InstuderingsFrågorHållbar.md  Seminarie1utv.docx  Slutseminarie 2.docx
soppa/2DT901 - Datorns Uppbyggnad/: Reflektion globala målen uppgift.docx
soppa/2DT902 - Mjukvaruarkitektur/: Assignment1NEw.drawio  Inlämning1.docx  Inlämning2.docx  Project.drawio  Projectpres.pptx  SecurityProj.crswap  SecurityProj.drawio  mjukvaruarkitekturInförtenta.md
soppa/2DT903 - Inbyggda/: 2DT903-assignment 1.docx  2DT903-assignment 2 .docx  InförTenta.md
soppa/Oklart/: Assign 2.mat  Assign 2d.mat  Dok1.docx  Lab3.m  Lab4Elektronikdel2.m  Lab4Mekanik.m  assign 3.docx  assign 3.mat  assign1.m  assign1b), 2.asv  assign3d.mat  asssign3d.mat  histplot.fig
testing/htmx/: index.html
ulv/: README.md
ulv/Databaser/: 01-22.sql  02-05.sql  2024-02-19.mwb.bak  room_booking.mwb.bak  temp_01-22.sql  temp_hotell.sql
ulv/Projects/: ReadMe.md
william/IT120G/assign2/: CMakeLists.txt
william/IT120G/assign2/assingment2/: assignment2.doc
william/IT120G/assign2/assingment2/src/core/: bettingFunctions.cpp
william/IT120G/assign2/assingment2/src/headers/: boardFunctions.h
william/IT120G/assign2/src/headers/: consts.h  mylibs.h
y2/code/2dt901/labs/lab3/t4/: CMakeLists.txt  taskFour.S
y2/code/2dt901/labs/lab3/t5/: CMakeLists.txt  taskFive.S
y2/code/2dt901/labs/lab4/t2/: CMakeLists.txt  main.c
year1/: .gitignore  README.md
year2/: README.md
yoda/: README.md
(+3302 files in other folders)
